@@ -1,6 +1,13 @@
+2008-08-27  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* FeatureRequiresRootPrivilegeOnUnixTest.cs: Remove unneeded 
+	using clauses.
+	* NewLineLiteralTest.cs: Convert to the new test API and add a 
+	bit more coverage.
+
 2008-08-24  Sebastien Pouliot  <sebastien@ximian.com>
 
-	* FeatureRequiresRootPrivilegeOnUnixRule.cs: Convert to the new
+	* FeatureRequiresRootPrivilegeOnUnixTest.cs: Convert to the new
 	test API. Add a few more cases to get better unit tests coverage.
 
 2008-08-07  Sebastien Pouliot  <sebastien@ximian.com>
